# modern-llms-crash-course

./: .gitignore  README.md  pyproject.toml
week1_tokenizer/: seminar.ipynb
week2_data_processing/: seminar.ipynb
